--- a/lib/i18n/string.i18n.json
+++ b/lib/i18n/string.i18n.json
@@ -23,7 +23,9 @@
     "done" : "Done",
     "quick_session" : "Quick Session",
     "still_dont_have" : "You still don't have",
-    "no_description" : "No description"
+    "no_description" : "No description",
+    "continue_with" : "Continue with",
+    "or" : "or"
   },
   "projects": {
     "title": "Project",
@@ -31,6 +33,8 @@
     "header_project_page": "Let's work",
     "invite_friends": "Invite friends",
     "any_project" : "any project",
+    "in_progress" : "In Progress",
+    "already_done" : "Already Done",
     "create": {
       "title": "New Project",
       "add_cover": "Add Cover",
@@ -58,6 +62,14 @@
       "about_us": {
         "title": "About us",
         "privacy_policy": "Privacy Policy"
+      },
+      "delete_account" : {
+        "title": "Delete Account",
+        "description" : "Are you sure you want to delete this account? This action is irreversible and all the data associated with this account will be deleted"
+      },
+      "update" : {
+        "updated_info" : "Your information has been successfully updated",
+        "updated_photo" : "Your profile image has been successfully updated"
       },
       "logout": {
         "title": "Logout",
@@ -139,6 +151,11 @@
       "creating_project": "An error occurred while creating a new project",
       "updating_project": "An error occurred while updating your project",
       "deleting_project": "An error occurred while deleting your project"
+    },
+    "users" : {
+      "updating_user" : "An error occurred while updating your data",
+      "updating_user_photo" : "An error occurred while updating your profile image",
+      "deleting_user" : "An error occurred while deleting your account"
     },
     "tasks": {
       "creating_task": "An error occurred while creating a new task",
