--- a/lib/i18n/string.i18n.json
+++ b/lib/i18n/string.i18n.json
@@ -20,12 +20,17 @@
     "today": "Today",
     "yesterday": "Yesterday",
     "all_times": "All Time",
+    "pomodoro_done" : "Pomodoros done",
     "done" : "Done",
     "quick_session" : "Quick Session",
     "still_dont_have" : "You still don't have",
     "no_description" : "No description",
     "continue_with" : "Continue with",
-    "or" : "or"
+    "completed_at" : "Completed at",
+    "created_at" : "Created at",
+    "or" : "or",
+    "work_session" : "Work Session",
+    "hours" : "hours"
   },
   "projects": {
     "title": "Project",
@@ -91,6 +96,7 @@
     "break_time": "Break Time",
     "total_tasks": "Total Tasks",
     "timer": "Timer",
+    "task_info" : "Task Information",
     "breaktime": "Break",
     "reset_timer": {
       "title": "Reset Timer",
@@ -152,6 +158,7 @@
     "please_restart": "Please restart the application.",
     "please_retry" : "Please Retry",
     "valid_info" : "Please enter valid information",
+    "due_date_before_today" : "End date cannot be in the past.",
     "projects": {
       "fetching_project": "An error occurred while fetching your projects.",
       "creating_project": "An error occurred while creating a new project",
